# localshare-desktop

./: .env  .gitignore  .md  BACKEND_MIGRATION.sql  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  PROCESS_HOSTING_REFACTOR.md  README.md  RELEASE_NOTES.md  TESTING.md  TEST_SUMMARY.md  WINDOWS_INSTALL.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.build.json  vite.config.ts
.github/workflows/: release.yml
@/components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
e2e/: accessibility.spec.ts  app-launch.spec.ts  navigation.spec.ts  performance.spec.ts  ui-components.spec.ts
scripts/: check-release.sh  check-updater.sh  notarize-macos.sh  prepare-server-updates.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  test_backend.sh
src-tauri/capabilities/: default.json  http.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tunnel_names.rs
src-tauri/src/api/: client.rs  mod.rs  types.rs
src-tauri/src/auth/: helpers.rs  jwt.rs  mod.rs  storage.rs  supabase.rs  token.rs
src-tauri/src/capsules/: mod.rs
src-tauri/src/codes/: mod.rs
src-tauri/src/commands/: auth.rs  commands.rs  discovery.rs  grids.rs  media.rs  messaging.rs  mod.rs  p2p.rs  process.rs  process_tunnel.rs  relay.rs  resource_codes.rs  share.rs  terminal.rs  transport.rs  tunnel.rs  updater.rs  websocket.rs  windows.rs
src-tauri/src/discovery/: mod.rs  scanner.rs  types.rs
src-tauri/src/frp/: client.rs  config.rs  mod.rs  process.rs  types.rs
src-tauri/src/grids/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/media/: audio_device_manager.rs  audio_utils.rs  codec.rs  manager.rs  mesh_session.rs  mod.rs
src-tauri/src/messaging/: mod.rs
src-tauri/src/p2p/: connection.rs  mod.rs
src-tauri/src/process/: discovered_monitor.rs  manager.rs  mod.rs  port_detection.rs  terminal_process.rs  types.rs
src-tauri/src/share/: connection.rs  mod.rs
src-tauri/src/state/: app.rs  codes.rs  mod.rs  user.rs  windows.rs
src-tauri/src/terminal/: manager.rs  mod.rs  name_generator.rs  session.rs  shell.rs  types.rs
src-tauri/src/transport/: http_tunnel.rs  mod.rs  tcp_tunnel.rs  terminal_tunnel.rs
src-tauri/src/tunnel/: client.rs  mod.rs  proxy.rs
src-tauri/src/utils/: codes.rs  command.rs  mod.rs  network.rs  validation.rs
src-tauri/src/websocket/: mod.rs
src-tauri/src/windows/: commands.rs  manager.rs  mod.rs  tab_state.rs  types.rs
src/api/: coordinator.ts
src/components/: AppSidebar.tsx  ConnectionBadge.tsx  EmptyState.tsx  TitleBar.tsx  UsernameSettings.tsx  nav-channels.tsx  nav-grids.tsx  nav-processes.tsx  nav-user.tsx
src/context/: P2PProvider.tsx
src/hooks/: useAdaptiveLayout.ts  useAudioDevices.ts  useBandwidthTracking.ts  useChannels.ts  useConnectionManager.ts  useGridDetails.ts  useGrids.ts  useKeyboardShortcuts.ts  useMediaStreams.ts  useMessageNotifications.ts  useMessageReactions.ts  useMessages.ts  useNetworkStatus.ts  useProcessManager.ts  useResourceCodeCommands.ts  useRustAudioStream.ts  useTauriCommands.ts  useTerminal.ts  useTerminalSessions.ts  useTransportManager.ts  useVoiceWebRTC.ts  (+4 more)
(+130 files in other folders)
