[package]
name = "roguegrid9"
version = "0.1.0"
description = "RogueGrid9 Desktop Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dirs = "5.0"
futures-util = "0.3"
glob = "0.3"
http = "0.2"
jsonwebtoken = "8.3"
log = "0.4"
nnnoiseless = "0.5"
once_cell = "1.19"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rubato = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-http = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tempfile = "3.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.4"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
which = "4.4"
warp = "0.3"
zip = "0.6"
hmac = "0.12"
sha1 = "0.10"
lazy_static = "1.4"
# File sync dependencies
notify = "6.1"
# Terminal dependencies
parking_lot = "0.12"
portable-pty = "0.8"
shell-words = "1.1"
# WebRTC dependencies
webrtc = "0.9"
interceptor = "0.9"
bytes = "1.5"
